--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         <h2>Meu Portfólio</h2>
         <p>Aqui estão alguns dos meus trabalhos:</p>
         <ul>
-            <li><a href="http://127.0.0.1:5500/portifolio%201.html">Projeto 1</a></li>
+            <li><a href="https://joaovitorflroesweiber.github.io/trabalhofaculdade.github.io/portfolio.html">Projeto 1</a></li>
             <li><a href="file:///C:/Users/João%20Vitor/Desktop/VS%20CODE/portifolio%202.html">Projeto 2</a></li>
         </ul>
     </main>
