--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <p>Aqui estão alguns dos meus trabalhos:</p>
         <ul>
             <li><a href="https://joaovitorflroesweiber.github.io/trabalhofaculdade.github.io/portfolio.html">Projeto 1</a></li>
-            <li><a href="file:///C:/Users/João%20Vitor/Desktop/VS%20CODE/portifolio%202.html">Projeto 2</a></li>
+            <li><a href="https://joaovitorflroesweiber.github.io/trabalhofaculdade.github.io/portfolio.html/%20portfolio%202.html">Projeto 2</a></li>
         </ul>
     </main>
     <footer>
