--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
         <h2>Meu Portfólio</h2>
         <p>Aqui estão alguns dos meus trabalhos:</p>
         <ul>
-            <li><a href="https://joaovitorflroesweiber.github.io/trabalhofaculdade.github.io/portfolio.html">Projeto 1</a></li>
-            <li><a href="https://joaovitorflroesweiber.github.io/trabalhofaculdade.github.io/portfolio.html/%20portfolio%202.html">Projeto 2</a></li>
+            <li><a href="https://joaovitorflroesweiber.github.io/trabalhofaculdade.github.io/portifolio.html">Projeto 1</a></li>
+            <li><a href="https://joaovitorflroesweiber.github.io/trabalhofaculdade.github.io/portifolio.html/%20portfolio%202.html">Projeto 2</a></li>
         </ul>
     </main>
     <footer>
